# anilist-cli

./: Dockerfile  README.md  anilist.opam  dune-project  dune-workspace
lib/: cliArgument.ml  cliArgument.mli  commandLineInvocation.ml  commandLineInvocation.mli  commandLineInvocationBranch.ml  commandLineInvocationBranch.mli  commandLineInvocationParser.ml  commandLineInvocationParser.mli  commandLineInvocationShared.ml  commandLineInvocationShared.mli  commandLineInvocationState.ml  commandLineInvocationState.mli  commandLineInvocationTypes.ml  commandLineInvocationValidation.ml  commandLineInvocationValidation.mli  dune  graphQlDirective.ml  graphQlDirective.mli  graphQlField.ml  graphQlField.mli  graphQlFragmentDefinition.ml  graphQlFragmentDefinition.mli  graphQlName.ml  graphQlName.mli  graphQlOperation.ml  graphQlOperation.mli  graphQlQuery.ml  graphQlQuery.mli  graphQlSelection.ml  graphQlSelection.mli  graphQlTransport.ml  graphQlTransport.mli  loweringEngine.ml  loweringEngine.mli  requestOptions.ml  requestOptions.mli  schemaArgumentParser.ml  schemaArgumentParser.mli  schemaCommand.ml  schemaCommand.mli  (+8 more)
scripts/: build-docker-image.sh
test/: dune  loweringEngineTest.ml
