(library
 (name anilist)
 (public_name anilist)
 (modules
  cliArgument
  commandLineInvocationBranch
  commandLineInvocationParser
  commandLineInvocationShared
  commandLineInvocationState
  commandLineInvocationTypes
  commandLineInvocationValidation
  graphQlFragmentDefinition
  graphQlOperation
  graphQlSelection
  graphQlTransport
  graphQlName
  graphQlQuery
  loweringEngine
  requestOptions
  schemaArgumentParser
  schemaCommand
  schemaCommandTypes
  schemaQueries
  selectionSet
  stringPrefix)
 (private_modules
  commandLineInvocationBranch
  commandLineInvocationState
  commandLineInvocationValidation
  schemaQueries
  stringPrefix)
 (libraries cohttp-lwt-unix lwt uri yojson)
 (flags
  (:standard -warn-error +a)))
